# eqdata_generator

./: .gitignore  README.rst  setup.cfg
eqdata_generator/: cli.py
