[bumpversion]
current_version = 0.0.1
commit = true
tag = true

[bumpversion:file:signal_tools/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[metadata]
name = eqdata-generator
version = attr: eqdata_generator.__version__
author = Weber Wang
author_email = weber0205@gmail.com
description = Command line tool to generate test data for the NTU earthquate detector
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = signals, science, electronics, data
python_requires = >=3.10
license = GPL3
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Environment :: Console

[options]
include_package_data = True
packages = find:
install_requires =
  numpy
  click

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    tests*

[options.entry_points]
console_scripts =
    eqd-generate = eqdata_generator.cli:cli
